Fixed overflowing buttons on management login wrap

--- a/src/css/orderpad.css
+++ b/src/css/orderpad.css
@@ -360,7 +360,8 @@ h5{
 }
 @media(max-width:474px) {
     .orderpadwrap{
-        height: 100%;
+        min-height: 100%;
+        padding-bottom: 10vh;
     }
     .checkmarksvg{
         justify-content: center
